--- a/skill.yaml
+++ b/skill.yaml
@@ -189,7 +189,7 @@ keywords:
   - newsletters
   - subscribers
 
-category: marketing
+category: productivity
 icon: "\U0001F4E7"
 
 # Reference values
